--- a/app/app.css
+++ b/app/app.css
@@ -1,25 +1,20 @@
 /* app css stylesheet */
 
 .menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+    padding:0;
+    margin:0;
+    padding-top:25px;
+    padding-bottom:25px;
+    list-style: none;
+    border-bottom: 1px #CECECE solid;
+    margin-bottom: 2em;
 }
 
-.menu:before {
-  content: "[";
-}
-
-.menu:after {
-  content: "]";
+.menu .btn {
+    min-width:100px;
 }
 
 .menu > li {
-  display: inline;
-}
-
-.menu > li + li:before {
-  content: "|";
-  padding-right: 0.3em;
+    margin-right: 20px;
+    display: inline;
 }
