--- a/app/fonts/fonts.css
+++ b/app/fonts/fonts.css
@@ -1,52 +1,3 @@
-@import "/fonts/font-awesome/font-awesome.css";
-
-/* Roboto */
-@font-face {
-    font-family: "fl";
-    font-weight: 300!important;
-    src: local('Robotto-Light'), local('Robotto Light'), url('/fonts/roboto/Roboto-Light.ttf');
-}
-
-@font-face {
-    font-family: "fr";
-    font-weight: 400!important;
-    src: local('Robotto-Regular'), local('Robotto Regular'), url('/fonts/roboto/Roboto-Regular.ttf');
-}
-
-@font-face {
-    font-family: "fm";
-    font-weight: 500!important;
-    src: local('Robotto-Medium'), local('Robotto Medium'), url('/fonts/roboto/Roboto-Medium.ttf');
-}
-
-@font-face {
-    font-family: "fb";
-    font-weight: 700!important;
-    src: local('Robotto-Bold'), local('Robotto Bold'), url('/fonts/roboto/Roboto-Black.ttf');
-}
-
-/* AMPLITUDE */
-@font-face {
-    font-family: "fal";
-    font-weight: 300!important;
-    src: local('Robotto-Light'), local('Robotto Light'), url('/fonts/amplitude/Amplitude-Light.ttf');
-}
-
-@font-face {
-    font-family: "far";
-    font-weight: 400!important;
-    src: local('Robotto-Regular'), local('Robotto Regular'), url('/fonts/amplitude/Amplitude-Regular.ttf');
-}
-
-@font-face {
-    font-family: "fam";
-    font-weight: 500!important;
-    src: local('Robotto-Medium'), local('Robotto Medium'), url('/fonts/amplitude/Amplitude-Medium.ttf');
-}
-
-@font-face {
-    font-family: "fab";
-    font-weight: 700!important;
-    src: local('Robotto-Bold'), local('Robotto Bold'), url('/fonts/amplitude/Amplitude-Black.ttf');
-}
+@import "/fonts/fonts.css";
+@import "/fonts/roboto.css";
 
